--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "npm-run-all --parallel sec webServe lint:watch test:watch",
     "lint": "esw webpack.config.* src build --color",
     "lint:watch": "npm run lint -- --watch",
+    "mock-data": "babel-node build/mockDataGenerate",
     "sec": "nsp check",
     "test": "mocha --reporter progress build/testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch",
