--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
     "prestart": "babel-node build/startMsg.js",
-    "start": "npm-run-all --parallel sec webServe lint:watch test:watch",
+    "start": "npm-run-all --parallel sec webServe lint:watch test:watch mock-api",
     "lint": "esw webpack.config.* src build --color",
     "lint:watch": "npm run lint -- --watch",
-    "mock-data": "babel-node build/mockDataGenerate",
+    "premock-api": "babel-node build/mockDataGenerate",
+    "mock-api": "json-server --watch src/api/db.json --port 3001",
     "sec": "nsp check",
     "test": "mocha --reporter progress build/testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch",
